# collegeward

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  start.sh
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20251209_add_user_id_to_xp_transactions.py  20251212_add_missing_xp_transaction_columns.py  20251212_add_topic_taxonomy.py
app/: dependencies.py  main.py
app/ai/: flashcard_generator.py  quiz_generator.py
app/core/: circuit_breaker.py  config.py  decorators.py  graceful_degradation.py  logging.py  monitoring.py  rate_limiter.py  security.py  validation.py
app/db/: base.py  init_db.py  session.py  utils.py
app/middleware/: auth_middleware.py  monitoring_middleware.py
app/models/: __init__.py  achievement.py  ai_response.py  conversation.py  flashcard.py  message.py  note.py  quiz.py  quiz_question.py  study_recommendation.py  study_session.py  study_streak.py  subject_mastery.py  subscription.py  topic_taxonomy.py  user.py  user_achievement.py  user_game_profile.py  xp_transaction.py
app/rag/: qdrant_client.py  rag_service.py  retriever.py
app/schemas/: chat_schema.py  flashcard_schema.py  gamification_schema.py  note_schema.py  progress_schema.py  quiz_schema.py  subscription_schema.py  user_schema.py
app/services/: ai_service.py  ai_tutor_service.py  document_service.py  embedding_service.py  file_processor.py  flashcard_services.py  gamification_service.py  local_storage.py  mastery_service.py  notification_scheduler.py  notification_service.py  progress_service.py  (+5 more)
(+15 files in other folders)
