[project]
name = "collegeward"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "bleach>=6.3.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.121.2",
    "firebase-admin>=7.1.0",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.15.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
